--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <button id="quickGenerate" class="btn">Quick Generate</button>
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
