created method to simplify code, updated ui, created copy button (not working yet)

--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/style.css" /> -->
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper" id="blank2">
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
+      <div class="card" id="blank">
         <div class="card-body">
           <textarea
             readonly
@@ -23,6 +21,7 @@
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
+          <button id="copyButton">Copy Text</button>
         </div>
         <div class="card-footer">
           <button id="quickGenerate" class="btn">Quick Generate</button>
