--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <!-- <link rel="stylesheet" href="./assets/css/style.css" /> -->
   </head>
   <body>
     <div class="wrapper" id="blank2">
@@ -14,7 +13,7 @@
         <h1>Password Generator</h1>
       </header>
       <div class="card" id="blank">
-        <div class="card-body">
+        <div id="password-body">
           <textarea
             readonly
             id="password"
