--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Passwords Appear Here"
             aria-label="Generated Password"
           ></textarea>
           <button id="copyButton">Copy Text</button>
