--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="card-footer">
           <button id="quickGenerate" class="btn">Quick Generate</button>
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn">Custom Password</button>
         </div>
       </div>
     </div>
