--- a/index.html
+++ b/index.html
@@ -5,27 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="./assets/images/pad-lock-vector-icon.png" />
   </head>
   <body>
-    <div class="wrapper" id="blank2">
+    <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card" id="blank">
-        <div id="password-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Passwords Appear Here"
-            aria-label="Generated Password"
-          ></textarea>
-          <button id="copyButton">Copy Text</button>
-        </div>
-        <div class="card-footer">
-          <button id="quickGenerate" class="btn">Quick Generate</button>
-          <button id="generate" class="btn">Custom Password</button>
-        </div>
+      <div id="password-body">
+        <textarea
+          readonly
+          id="password"
+          placeholder="Passwords Appear Here"
+          aria-label="Generated Password"
+        ></textarea>
+        <button id="copyButton">Copy Text</button>
+      </div>
+      <div class="card-footer" id="footer">
+        <button id="quickGenerate" class="btn">Quick Generate</button>
+        <button id="generate" class="btn">Custom Password</button>
       </div>
     </div>
     <script src="./assets/js/script.js"></script>
