--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <input id="passwordLength" value="16"/>
         </form>
 
-        <button id="quickGenerate" class="btn">Generate Password</button>
+        <button id="generate" class="btn">Generate Password</button>
       </div>
     </div>
     <script src="./assets/js/script.js"></script>
