--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Password asdfasfasdf</h1>
+        <h1>Password Generator</h1>
       </header>
       <div id="password-body">
         <textarea
