--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div id="password-body">
+      <section id="password-body">
         <textarea
           readonly
           id="password"
@@ -21,8 +21,8 @@
           aria-label="Generated Password"
         ></textarea>
         <button id="copyButton">Copy Text</button>
-      </div>
-      <div class="card-footer" id="footer">
+      </section>
+      <section class="card-footer" id="footer">
 
         <div class="char">
           <form>
@@ -41,7 +41,7 @@
             <label>Numbers:</label>
             <input type="checkbox" id="numberCheck" checked/>
           </form>
-  
+
           <form>
             <label>Symbols:</label>
             <input type="checkbox" id="symbolCheck" checked/>
@@ -54,7 +54,11 @@
         </form>
 
         <button id="generate" class="btn">Generate Password</button>
-      </div>
+      </section>
+      <footer>
+        <button id="lightDarkButton">Light/Dark Mode</button>
+        <a href="https://github.com/dalto135/password-generator" target="_blank">Github</a>
+      </footer>
     </div>
     <script src="./assets/js/script.js"></script>
   </body>
