--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" href="./assets/images/pad-lock-vector-icon.png" />
   </head>
-  
+
   <body>
     <div class="wrapper">
       <header>
@@ -20,8 +20,8 @@
           readonly
           id="password"
           placeholder="Passwords Appear Here"
-          aria-label="Generated Password">
-        </textarea>
+          aria-label="Generated Password"
+        ></textarea>
 
         <button id="copyButton">Copy Text</button>
       </section>
