--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" href="./assets/images/pad-lock-vector-icon.png" />
+    <link rel="icon" href="./assets/images/favicon.ico" />
   </head>
 
   <body>
