--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" href="./assets/images/favicon.ico" />
+    <link rel="apple-touch-icon" href="./assets/images/favicon.ico"/>
   </head>
 
   <body>
